# supabase-pydantic-setup

./: .env  .gitignore  models.py  notebook.ipynb  pyproject.toml  run.py  supabase_utils.py  test_direct_insert.py
tables/: customer.sql  customer_data.sql
