[project]
name = "supasbase-setup"
version = "0.1.0"
description = "test package for setting up supabase"
authors = [
    {name = "fddiferd",email = "fddiferd@gmail.com"}
]

requires-python = ">=3.13,<4.0"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "supabase (>=2.16.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.0.0,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
